# global-flora-sdm

./: .gitignore  README.md  pyproject.toml
data/processed/: ocurrencias_limpias.gpkg
data/raw/: gbif_distribucion_especies.xlsx
docs/: informe_modelo.docx  informe_modelo.md  informe_v4.docx  lista_auditoria.docx  lista_auditoria.md  metricas_explicadas.docx  metricas_explicadas.md  proceso_completo.docx  proceso_completo.md  proyecto_sdm.docx  proyecto_sdm.md  resultados_iter1.docx  resultados_iter1.md
docs/v4/: flujo_trabajo.docx  flujo_trabajo.md
outputs/logs/: resumen_prediccion.csv
outputs/raster_idoneidad/: README.md  nolana_albescens_idoneidad_sa.tif
outputs/tables/: confianza_idoneidad_por_especie.csv  metricas_v4_completa.csv  metricas_v4_ensemble.csv  metrics_all.csv  metrics_all_ANTES.csv  metrics_all_BASELINE_saneada.csv  metrics_atriplex_semibaccata.csv  metrics_cumulopuntia_sphaerica.csv  metrics_encelia_canescens.csv  metrics_eulychnia_acida.csv  metrics_krameria_cistoidea.csv  metrics_miqueliopuntia_miquelii.csv  metrics_neltuma_chilensis.csv  metrics_nolana_divaricata.csv  metrics_nolana_sedifolia.csv  metrics_oxalis_gigantea.csv  metrics_pleurophora_pungens.csv  metrics_schinus_areira.csv  metrics_senna_cumingii.csv  metrics_skytanthus_acutus.csv
scripts/: 00_descarga_gbif.py  01_limpieza.py  02_capas_presente.py  03_terrain.py  04_extraccion.py  05_entrenar_ensemble.py  05_modelado.py  06_validacion.py  07_forecast_2050.py  07_predecir_sudamerica.py  07b_present_suitability.py  07c_low_n_eoo.py  08_figuras_v4.py  08_mapas.py  09_informe_docx.py  10_md_a_docx.py  11_md_a_latex.py  12_informe_v4_latex.py  _audit_varimp.py  aplicar_cv_adaptativo.py  armar_entrega.py  config.py  fix_slope_base_datos.py  importancia_bioclim.py  latex_comun.py  quemar_background_inservible.py  regenerar_slope_tif.py  separar_especies.py  utils.py
scripts/tuned_params/: README.md  gam.json  gbm.json  glm.json  maxent.json  rf.json
src/capas/: __init__.py  descarga.py  muestreo.py  nombres.py  pipeline.py
src/extraccion/: __init__.py  background.py  folds.py  (+1 more)
(+27 files in other folders)
